# AdjustablePhysics2D

./: CMakeLists.txt  Entity.cpp  Entity.h  PhysicsEngine.cpp  PhysicsEngine.h  library.h
base/: primitives.h
common/: AABB.cpp  AABB.h  Collision.h  CollisionFilter.cpp  CollisionFilter.h  Constraint.h  Joint.cpp  Joint.h  MassInfo.cpp  MassInfo.h  Polygon.cpp  Polygon.h  Shape.cpp  Shape.h  Transform.cpp  Transform.h
ecs/: Context.cpp  Context.h  ContextTemplatesImpl.h
ecs/components/: BaseComponentContainer.h  Component.h  ComponentContainer.cpp  ComponentContainer.h  ComponentContainerTemplatesImpl.h  ComponentType.h  Components.h  DoubleKeyContainer.h
ecs/systems/: BroadPhaseSystem.cpp  BroadPhaseSystem.h  CollisionSystem.cpp  CollisionSystem.h  ConstraintSystem.cpp  GlobalGravitationSystem.cpp  GlobalGravitationSystem.h  GravitationalForceSystem.cpp  GravitationalForceSystem.h  JointSystem.cpp  JointSystem.h  MoveSystem.cpp  MoveSystem.h  NarrowPhaseSystem.cpp  NarrowPhaseSystem.h  ShapeTranslationSystem.cpp  ShapeTranslationSystem.h  System.cpp  System.h  SystemType.h
math/: MathExtensions.cpp  MathExtensions.h  Vector2.cpp  Vector2.h
src/: CMakeLists.txt  PhysicsEngine.cpp  PhysicsEngine.h
src/base/: primitives.h
src/common/: AABB.cpp  AABB.h  CollisionFilter.cpp  CollisionFilter.h  Joint.h  MassInfo.cpp  Material.h  Polygon.cpp  Polygon.h  Quadtree.cpp  Quadtree.h  Shape.h  ShapeType.h  Transform.h
src/ecs/: Context.h
src/ecs/components/: BaseComponentContainer.h  ComponentContainerTemplatesImpl.h  ComponentType.h  DoubleKeyContainerTemplatesImpl.h
src/ecs/systems/: BroadPhaseSystem.cpp  BroadPhaseSystem.h  CollisionSystem.cpp  CollisionSystem.h  ConstraintSystem.h  GlobalGravitationSystem.h  GravitationalForceSystem.cpp  GravitationalForceSystem.h  MoveSystem.cpp  MoveSystem.h  NarrowPhaseSystem.h  ShapeTranslationSystem.cpp  ShapeTranslationSystem.h
src/math/: MathExtensions.cpp  MathExtensions.h  Vector2.h
test/: BroadPhaseTests.cpp  CMakeLists.txt  ConstraintTests.cpp  ContextAndComponentsTests.cpp  GravitationTests.cpp  JointTests.cpp  MoveSystemTests.cpp  QuadtreeTests.cpp  ShapeTranslationTests.cpp  example.cpp
